apps/longhorn/templates/longhorn-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: longhorn-vs
  namespace: longhorn-system
spec:
  gateways:
  - istio-system/external-gateway
  - istio-system/internal-gateway
  hosts:
  - "jiun2.ddns.net"
  - "longhorn.internal"
  - "longhorn.jiun2-internal.net"
  http:
  - match:
    - gateways:
      - istio-system/external-gateway
      uri:
        prefix: /longhorn
    route:
    - destination:
        host: longhorn-frontend.longhorn-system.svc.cluster.local
        port:
          number: 80
  - match:
    - gateways:
      - istio-system/internal-gateway
    route:
    - destination:
        host: longhorn-frontend.longhorn-system.svc.cluster.local
        port:
          number: 80
